--- a/img.qrc
+++ b/img.qrc
@@ -1,2 +1,5 @@
-<!DOCTYPE RCC>
-<RCC version="1.0"/>
+<RCC>
+    <qresource prefix="/img">
+        <file>img/Cloud.png</file>
+    </qresource>
+</RCC>
