--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>600</height>
+    <width>515</width>
+    <height>415</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>515</width>
+    <height>415</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
